--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,19 @@ header{
 	background-size: cover;
 }
 
+#banner .sombra{
+	transform: matrix(-1, 0, 0, -1, 0, 0);
+	background: transparent linear-gradient(180deg, #000000A6 0%, #00000000 100%) 0% 0% no-repeat padding-box;
+	opacity: 0.65;
+	width: 100%;
+    height: 468px;
+    position: absolute;
+}
+
 #banner .interno{
 	padding-top: 80px;
 	padding-left: 138px;
+	position: absolute;
 }
 
 #banner .interno p{
